tools/gd/src/pager/tests/snapshots/gd__pager__tests__tree__build_tree_lines_output_identical_nested_tree.snap
---
source: gd/src/pager/tests/tree.rs
expression: "stripped.join(\"\\n\")"
---
├──  M README.md           
├──  src                   
│   ├──  M lib.rs          
│   └──  M main.rs         
└──  tests                 
    └──  M integration.rs
