tools/gd/src/pager/tests/snapshots/gd__pager__tests__tree__snapshot_tree_entries_nested.snap
---
source: gd/src/pager/tests/tree.rs
expression: build_tree_entries(&files)
---
[
    TreeEntry {
        label: "README.md",
        depth: 0,
        file_idx: Some(
            2,
        ),
        status: Some(
            Modified,
        ),
        collapsed: false,
    },
    TreeEntry {
        label: "src",
        depth: 0,
        file_idx: None,
        status: None,
        collapsed: false,
    },
    TreeEntry {
        label: "lib.rs",
        depth: 1,
        file_idx: Some(
            0,
        ),
        status: Some(
            Modified,
        ),
        collapsed: false,
    },
    TreeEntry {
        label: "main.rs",
        depth: 1,
        file_idx: Some(
            1,
        ),
        status: Some(
            Modified,
        ),
        collapsed: false,
    },
]
