tools/gd/src/pager/tests/snapshots/gd__pager__tests__tree__snapshot_tree_entries_with_status.snap
---
source: gd/src/pager/tests/tree.rs
expression: build_tree_entries(&files)
---
[
    TreeEntry {
        label: "a.rs",
        depth: 0,
        file_idx: Some(
            0,
        ),
        status: Some(
            Modified,
        ),
        collapsed: false,
    },
    TreeEntry {
        label: "b.rs",
        depth: 0,
        file_idx: Some(
            1,
        ),
        status: Some(
            Added,
        ),
        collapsed: false,
    },
    TreeEntry {
        label: "c.rs",
        depth: 0,
        file_idx: Some(
            2,
        ),
        status: Some(
            Deleted,
        ),
        collapsed: false,
    },
    TreeEntry {
        label: "e.rs",
        depth: 0,
        file_idx: Some(
            3,
        ),
        status: Some(
            Renamed,
        ),
        collapsed: false,
    },
    TreeEntry {
        label: "f.rs",
        depth: 0,
        file_idx: Some(
            4,
        ),
        status: Some(
            Untracked,
        ),
        collapsed: false,
    },
]
