tools/gd/src/pager/tests/snapshots/gd__pager__tests__tree__snapshot_tree_lines_flat.snap
---
source: gd/src/pager/tests/tree.rs
expression: "stripped.join(\"\\n\")"
---
├──  M a.rs  
├──  M b.rs  
└──  M c.rs
