tools/gd/src/pager/tests/snapshots/gd__pager__tests__tree__snapshot_tree_lines_nested.snap
---
source: gd/src/pager/tests/tree.rs
expression: "stripped.join(\"\\n\")"
---
├──  M README.md    
└──  src            
    ├──  M lib.rs   
    └──  M main.rs
